--- a/sample.env
+++ b/sample.env
@@ -4,5 +4,5 @@ API_HASH = a4491350f84723772822965d4c9101b0
 BOT_TOKEN = 5511212317:AAHrO4djFSncPgxNCnZ8StjSgzQL5bplzmY
 MONGO_DB_URI = mongodb+srv://DhirajBadAss:DhirajBadAss@cluster0.ximrjs6.mongodb.net/?retryWrites=true&w=majority
 LOG_GROUP_ID = -1001604658702
-MUSIC_BOT_NAME = (っ◔◡◔)っ ♥ Sarita Bhabhi ♥
+MUSIC_BOT_NAME = Sarita Bhabhi
 OWNER_ID = 5404761904
