--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,7 @@ STRING_SESSION = AQAQPPC05cHMPtgUuIcz06Xd7THev8KbFyPydqUUa9LgWyerU5A-xU2BQTVabFI
 API_ID = 29190152
 API_HASH = a4491350f84723772822965d4c9101b0
 BOT_TOKEN = 5511212317:AAHrO4djFSncPgxNCnZ8StjSgzQL5bplzmY
-MONGO_DB_URI = mongodb+srv://DhirajBadAss:DhirajBadAss@cluster0.ximrjs6.mongodb.net/?retryWrites=true&w=majority
+MONGO_DB_URI = mongodb+srv://hnyyy:hnyyy@cluster0.tkvcms2.mongodb.net/?retryWrites=true&w=majority
 LOG_GROUP_ID = -1001604658702
 MUSIC_BOT_NAME = Sarita Bhabhi
 OWNER_ID = 5404761904
